--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -8,5 +8,93 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: Poppins,sans-serif;
+    font-family: Poppins, sans-serif;
+}
+
+/* common */
+.container {
+    width: 1170px;
+    max-width: calc(100% - 30px);
+    margin: 0 auto;
+}
+
+.btn {
+    --height: 56px
+
+    display: inline-block;
+    min-width: 117px;
+    text-align: center;
+    height: var(--height);
+    line-height: calc(var(--height) - 2px);
+    border-radius: 25px;
+    border: 1px solid rgb(0, 9, 88, 0.7);
+    color: #000958;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.btn:hover {
+    opacity: 0.5;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "sora", sans-serif;
+}
+
+input,
+textarea,
+select,
+button {
+    font-size: inherit;
+    font-family: inherit;
+}
+
+/* header */
+
+.header {
+    background: #fffaf5;
+    height: 100vh;
+}
+
+.header-top {
+    padding: 26px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-list {
+    display: flex;
+}
+
+.nav-item {
+    padding: 8px 18px;
+    color: #5e6085;
+    font-family: Poppins;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1;
+}
+
+.nav-item:hover {
+    text-shadow: 0.5px 0 0 currentColor;
+    color: #000958;
+}
+
+.btn-header {
+    --height:50px
 }
