--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 * {
     box-sizing: border-box;
 }
+:root {
+    --primary-color: #ff5b2e;
+}
 
 html {
     font-size: 62.5%;
@@ -9,6 +12,7 @@ html {
 body {
     font-size: 1.6rem;
     font-family: Poppins, sans-serif;
+    background: #fffaf5;
 }
 
 /* common */
@@ -19,22 +23,23 @@ body {
 }
 
 .btn {
-    --height: 56px
-
-    display: inline-block;
-    min-width: 117px;
-    text-align: center;
+    --height: 56px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--primary-color);
+    color: #fff;
+    min-width: 130px;
     height: var(--height);
     line-height: calc(var(--height) - 2px);
-    border-radius: 25px;
-    border: 1px solid rgb(0, 9, 88, 0.7);
-    color: #000958;
-    font-size: 1.4rem;
+    border-radius: 99px;
     font-weight: 600;
+    font-size: 1.4rem;
+    text-align: center;
 }
 
 .btn:hover {
-    opacity: 0.5;
+    opacity: 0.9;
 }
 
 a {
@@ -58,10 +63,32 @@ button {
     font-family: inherit;
 }
 
+.section-heading {
+    color: #000958;
+    font-size: 5.2rem;
+    font-weight: 700;
+    line-height: 1.19; /* 119.231% */
+}
+
+.section-desc {
+    color: #656689;
+    line-height: 1.87; /* 187.5% */
+}
+
+.btn__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    background: #fff;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+
 /* header */
 
 .header {
-    background: #fffaf5;
     height: 100vh;
 }
 
@@ -96,5 +123,551 @@ button {
 }
 
 .btn-header {
-    --height:50px
+    --height: 50px;
+    color: #000958;
+    border: 1px solid rgb(0, 9, 88, 0.7);
+    background-color: transparent;
+}
+
+/* hero */
+
+.hero {
+    margin: 84px 0 77px;
+}
+
+.hero__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero__media {
+    display: flex;
+    position: relative;
+    padding-bottom: 94px;
+}
+
+.hero__img-wrap {
+    position: relative;
+    width: 388px;
+    height: 488px;
+    border-radius: 16px;
+    background: #fe997b;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    border: 3px solid #fff;
+}
+
+.hero__img-wrap-small {
+    width: 186px;
+    height: 244px;
+    background: #faa7ad;
+    align-self: flex-end;
+    margin: 0 0 -58px -24px;
+    border: 2px solid #fddfe1;
+}
+
+.hero__img {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+}
+
+.hero__decoration-left {
+    position: absolute;
+    top: 0;
+    right: -43px;
+    z-index: -1;
+}
+
+.hero__decoration-right {
+    position: absolute;
+    bottom: 10px;
+    left: -58px;
+    z-index: -1;
+}
+
+.hero__list {
+    position: absolute;
+    width: 250px;
+    height: 156px;
+    padding: 18px 14px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+    bottom: 0;
+    left: 129px;
+}
+
+.hero-list-item {
+    display: flex;
+    align-items: center;
+}
+
+.hero-list-item__thumb {
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.hero-list-item__info {
+    margin-left: 10px;
+}
+.hero-list-item__skeleton {
+    width: 118px;
+    height: 4px;
+    border-radius: 10px;
+    opacity: 0.08;
+    background: #000958;
+    margin-top: 6px;
+}
+
+.hero-list-item__title {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.4;
+    line-height: 1;
+    color: #181e52;
+}
+.hero-list__row {
+    width: 222px;
+    height: 2px;
+    background: #f2f2f2;
+    margin: 20px 0;
+}
+
+.hero-list-item__skeleton-short {
+    width: 39px;
+}
+
+.hero__heading {
+    font-size: 6.6rem;
+    line-height: 1.15; /* 115.152% */
+    width: 517px;
+}
+
+.hero___desc {
+    width: 391px;
+    margin-top: 24px;
+}
+
+.hero__action {
+    margin-top: 38px;
+    display: flex;
+    align-items: center;
+}
+
+.hero__btn {
+    --height: 60px;
+    min-width: 189px;
+    background: #ff5b2e;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+    border: 1px solid #ff5b2e;
+    font-size: 16px;
+    color: #fff;
+}
+
+.hero__call {
+    color: #000958;
+    text-align: center;
+    font-weight: 500;
+    line-height: 1; /* 100% */
+    text-decoration-line: underline;
+    margin-left: 24px;
+}
+
+/* about*/
+
+.about {
+    padding: 53px 0;
+}
+
+.about__inner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    row-gap: 146px;
+}
+
+.about__label {
+    color: #5e6085;
+    font-family: Sora;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+
+.about__heading {
+    width: 446px;
+    margin-top: 15px;
+}
+
+.about__desc {
+    width: 431px;
+    margin-top: 24px;
+}
+
+.about__check-list {
+    margin-top: 54px;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 36px;
+}
+
+.about__check-item {
+    position: relative;
+    color: #48496a;
+    font-size: 1.8rem;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 0 10px;
+}
+
+.about__check-item::before {
+    content: "";
+    border-radius: 4px;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: #ff5d31;
+    box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
+}
+
+.about__check-item::after {
+    content: url(../icons/check.svg);
+    position: absolute;
+    top: 3px;
+    left: 5px;
+}
+
+.about__media {
+    position: relative;
+    transition: all 0.25s;
+}
+
+.about__media:hover {
+    transform: translateY(-25px);
+}
+
+.about__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 165px;
+    position: absolute;
+    padding: 31px 26px;
+    width: 136px;
+    border-radius: 10px;
+    background: #5bd6e2;
+    box-shadow: -15px 26px 48px 0px rgba(85, 240, 255, 0.17);
+}
+
+.about__card-title {
+    color: #fff;
+    text-align: center;
+    font-family: Sora;
+    font-size: 4.2rem;
+    font-weight: 700;
+}
+
+.about__card-desc {
+    margin-top: 14px;
+    width: 83px;
+    color: #c6f4f9;
+    text-align: center;
+    font-size: 1.4rem;
+    line-height: 1.42; /* 142.857% */
+}
+
+.about__card-img {
+    position: absolute;
+    top: -39px;
+    left: 85px;
+}
+
+.about__img-wrap {
+    position: relative;
+    width: 494px;
+    margin-left: auto;
+}
+
+.about__img-wrap::after {
+    content: "";
+    display: inline-block;
+    width: 494px;
+    height: 336px;
+    border-radius: 16px;
+    background: linear-gradient(180deg, #fce0ef 0%, #fac3d1 100%);
+    box-shadow: 11px 18px 65px 0px rgba(255, 155, 121, 0.12);
+    z-index: -1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.about__img {
+    width: 450px;
+    display: block;
+    margin: 0 auto;
+}
+
+.about__img-decor {
+    position: absolute;
+    top: 157px;
+    right: -50px;
+    z-index: -1;
+}
+
+/* about 2 */
+
+.about__img-wrap-bottom {
+    border-radius: 18px;
+    border: 2px solid #fff;
+    background: linear-gradient(180deg, #c6e2fa 0%, #94c2ea 100%);
+    box-shadow: 0px 17px 77px -8px rgba(190, 165, 139, 0.17);
+    width: 458px;
+    height: 500px;
+    margin-left: 0;
+}
+
+.about__img-wrap-bottom::after {
+    content: none;
+}
+
+.about__img-bottom {
+    width: 100%;
+}
+
+.about__bottom-img {
+    position: absolute;
+}
+
+.about__bottom-img:nth-child(1) {
+    top: 12px;
+    right: 63px;
+}
+
+.about__bottom-img:nth-child(2) {
+    top: -16px;
+    right: 13px;
+}
+.about__bottom-img:nth-child(3) {
+    top: 33px;
+    right: -21px;
+}
+.about__bottom-img:nth-child(4) {
+    top: 268px;
+    right: -33px;
+}
+.about__bottom-img:nth-child(5) {
+    top: 336px;
+    right: 19px;
+}
+.about__bottom-img:nth-child(6) {
+    top: 435px;
+    left: 377px;
+}
+.about__bottom-img:nth-child(7) {
+    top: 442px;
+    left: 386px;
+}
+.about__bottom-img:nth-child(8) {
+    top: 447px;
+    left: 392px;
+}
+
+.about__heading-bottom {
+    width: 543px;
+}
+
+.about__desc-bottom {
+    width: 511px;
+    padding: 24px 0 52px 0;
+}
+
+.tab__list {
+    display: inline-flex;
+    column-gap: 56px;
+    position: relative;
+}
+
+.tab__list::after,
+.tab__item-active::after,
+.tab__content-link::after {
+    content: "";
+    height: 2px;
+    border-radius: 2px;
+    background: #ff5b2e;
+    position: absolute;
+    opacity: 0.07;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
+.tab__item {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    gap: 0 10px;
+    padding-bottom: 10px;
+}
+
+.tab__item-active::after {
+    opacity: 1;
+    width: 95px;
+}
+
+.tab__icon {
+    width: 18px;
+}
+
+.tab__title {
+    color: #48496a;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.tab__contents {
+    padding-top: 36px;
+}
+
+.tab__content-item {
+    display: none;
+}
+
+.tab__content-item-active {
+    display: inline-block;
+}
+
+.tab__content-desc {
+    color: #656689;
+    font-size: 1.4rem;
+    line-height: 1.71; /* 171.429% */
+    width: 391px;
+}
+
+.tab__content-link {
+    display: inline-block;
+    padding-top: 32px;
+    color: #ff5d31;
+    font-weight: 500;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.tab__content-link::after {
+    opacity: 1;
+    height: 1.5px;
+}
+
+/* service */
+.service {
+    margin-top: 190px;
+    background: #fff6ed;
+
+    padding: 68px 0 100px 0;
+}
+
+.service__top {
+    text-align: center;
+}
+
+.service__desc {
+    color: #5e6085;
+    text-align: center;
+    font-family: Sora;
+    font-weight: 600;
+    line-height: 1; /* 100% */
+    margin-bottom: 15px;
+}
+
+.service__body {
+    margin-top: 71px;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    gap: 0 65px;
+}
+
+.service__item {
+    padding: 30px 22px 30px 28px;
+    border-radius: 10px;
+    border: 2px solid rgba(255, 188, 122, 0.26);
+    background: #fff;
+}
+
+.service__item + .service__item {
+    margin-top: 24px;
+}
+.service__item-heading {
+    color: #000958;
+    font-family: Sora;
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1; /* 100% */
+}
+
+.service__item-desc {
+    width: 244px;
+    color: #656689;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.71; /* 171.429% */
+    margin-top: 18px;
+}
+
+.service__item-link {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-top: 24px;
+    color: #34396a;
+    font-family: Sora;
+    font-size: 1.2rem;
+    line-height: 1; /* 100% */
+}
+
+.service__item-link::after {
+    content: url(../icons/ArrowUpRight.svg);
+    margin-top: 2px;
+}
+
+.service__media {
+    position: relative;
+}
+
+.service__media::after {
+    position: absolute;
+    content: "";
+    border-radius: 10px;
+    background: linear-gradient(180deg, #9df1fb 0%, #73d0db 108.14%);
+    height: 350px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.service__img {
+    position: relative;
+    display: block;
+    width: 100%;
+    margin-top: 17px;
+    z-index: 1;
+}
+
+.service__cta-wrap {
+    margin-top: 45px;
+    display: flex;
+    justify-content: center;
+}
+
+.service__cta {
+    background: transparent;
+    color: #ff5b2e;
+    width: 214px;
+    height: 56px;
+    border: 1px solid rgb(255, 91, 46, 0.7);
 }
