--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ body {
     font-weight: 600;
     font-size: 1.4rem;
     text-align: center;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
 }
 
 .btn:hover {
@@ -86,6 +87,11 @@ button {
     border-radius: 50%;
 }
 
+button {
+    border-color: transparent;
+    outline: none;
+}
+
 /* header */
 
 .header {
@@ -127,6 +133,12 @@ button {
     color: #000958;
     border: 1px solid rgb(0, 9, 88, 0.7);
     background-color: transparent;
+    box-shadow: none;
+}
+
+.btn-header:hover {
+    color: #fff;
+    background-color: #000958;
 }
 
 /* hero */
@@ -344,11 +356,6 @@ button {
 
 .about__media {
     position: relative;
-    transition: all 0.25s;
-}
-
-.about__media:hover {
-    transform: translateY(-25px);
 }
 
 .about__card {
@@ -656,7 +663,7 @@ button {
     content: "";
     border-radius: 10px;
     background: linear-gradient(180deg, #9df1fb 0%, #73d0db 108.14%);
-    height: 350px;
+    height: 60%;
     left: 16px;
     right: 16px;
     bottom: 0;
@@ -682,6 +689,11 @@ button {
     width: 214px;
     height: 56px;
     border: 1px solid rgb(255, 91, 46, 0.7);
+}
+
+.service__cta:hover {
+    color: #fff;
+    background-color: #ff5b2e;
 }
 
 /* staff */
@@ -879,4 +891,454 @@ button {
     position: absolute;
     top: -10px;
     right: -112px;
+}
+
+.spicing__list {
+    margin-top: 56px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 44px;
+}
+
+.pricing-item {
+    border-radius: 20px;
+    background: #fff;
+    padding: 30px 28px 43px 28px;
+}
+
+.pricing-item:hover {
+    box-shadow: 0px 20px 44px 0px rgba(195, 108, 22, 0.06);
+}
+
+.pricing-item:hover .pricing-item__btn {
+    color: #fff;
+    background-color: #ff5b2e;
+}
+
+.spicing__container {
+    width: 996px;
+}
+
+.pricing-item__type {
+    color: #ff5b2e;
+    font-size: 1.2rem;
+    line-height: 1; /* 100% */
+}
+
+.pricing-item__heading {
+    margin-top: 8px;
+    color: #3f4065;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1; /* 100% */
+}
+
+.pricing-item__price {
+    margin-top: 24px;
+    color: #000958;
+    font-family: Sora;
+    font-size: 3.3rem;
+    font-weight: 700;
+    line-height: 1; /* 103.03% */
+}
+
+.pricing-item__btn {
+    --height: 44px;
+    margin-top: 22px;
+    width: 100%;
+    background-color: transparent;
+    border: 1px solid rgba(255, 91, 46, 0.6);
+    color: #ff5b2e;
+    font-weight: 500;
+    transition: color 0.1s, background-color 0.1s;
+}
+
+.pricing-item__list {
+    margin-top: 24px;
+}
+
+.pricing-item__item {
+    color: #656689;
+    font-size: 1.4rem;
+    line-height: 1; /* 100% */
+    display: flex;
+    align-items: center;
+    gap: 0 12px;
+    position: relative;
+}
+
+.pricing-item__item::before {
+    content: url(../icons/Check-price.svg);
+}
+
+.pricing-item__item + .pricing-item__item {
+    margin-top: 18px;
+}
+
+/* .pricing__active {
+    color: #fff;
+    background-color: #ff5b2e;
+} */
+
+.pricing-item__item:nth-of-type(7):before {
+    opacity: 0.4;
+}
+.pricing-item__item:nth-of-type(6):before {
+    opacity: 0.4;
+}
+.pricing-item__item:nth-of-type(5):before {
+    opacity: 0.4;
+}
+
+.pricing-item__ok::after {
+    content: url(../icons/Check-price.svg);
+    position: absolute;
+    opacity: 0.7;
+}
+
+/* review */
+
+.review {
+    padding: 53px 0;
+}
+
+.review__inner {
+    display: flex;
+    align-items: center;
+    gap: 0 44px;
+}
+
+.review__control {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 54px;
+    height: 54px;
+    flex-shrink: 0;
+    color: #ff5b2e;
+    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid #ffd1c4;
+}
+
+.review__control:hover {
+    color: #fff;
+    background-color: #ff5b2e;
+    border-color: #ff5b2e;
+    box-shadow: 0px 5px 27px 0px rgba(255, 91, 46, 0.3);
+}
+
+.review__list {
+    display: flex;
+}
+
+.review-item {
+    display: flex;
+    align-items: center;
+    gap: 0 115px;
+    width: 100%;
+    flex-shrink: 0;
+}
+
+.review__content {
+    overflow: hidden;
+}
+
+.review-item__meida {
+    width: 274px;
+    border-radius: 137px;
+    position: relative;
+    flex-shrink: 0;
+}
+
+.review-item__meida::before {
+    content: "";
+    width: 100%;
+    background: #ffda54;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 84%;
+    border-radius: inherit;
+}
+
+.review__img {
+    width: 100%;
+    border-radius: inherit;
+    position: relative;
+    z-index: 1;
+    display: block;
+}
+
+.review-item__quote {
+    margin-top: 24px;
+    width: 553px;
+    color: #000;
+    font-size: 1.8rem;
+    line-height: 1.55; /* 155.556% */
+}
+
+.review-item__author {
+    display: flex;
+    align-items: center;
+    margin-top: 34px;
+    color: #282828;
+    font-family: Sora;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1; /* 100% */
+}
+
+.review-item__author::before {
+    content: "";
+    width: 20px;
+    height: 2px;
+    background: #000;
+    display: inline-block;
+    border-radius: 99px;
+    margin-right: 8px;
+}
+
+.review__dots {
+    display: flex;
+    justify-content: center;
+    margin-top: 56px;
+    gap: 0 8px;
+}
+
+.review__dot {
+    width: 8px;
+    height: 8px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #ff5b2e;
+}
+
+.review__dot:hover {
+    background: #ff5b2e;
+}
+
+.review__dot-active {
+    width: 24px;
+    background: #ff5b2e;
+}
+
+.review-item__content {
+    margin-top: 65px;
+}
+
+.review__icon-right {
+    margin-left: auto;
+}
+
+/* blog */
+
+.blog {
+    padding: 77px 0;
+}
+
+.blog__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.blog__desc {
+    width: 350px;
+    color: #656689;
+    line-height: 1.87; /* 187.5% */
+}
+
+.blog__cta {
+    --height: 56px;
+    width: 182px;
+    margin-top: 24px;
+    border-radius: 31px;
+    border: 1px solid hsl(13deg 100% 59% / 60%);
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+    background-color: transparent;
+    color: #ff5b2e;
+    font-weight: 500;
+    line-height: 1; /* 100% */
+    transition: background-color 0.1s, color 0.1s;
+}
+
+.blog__cta:hover {
+    color: #fff;
+    background-color: #ff5b2e;
+    border-color: #ff5b2e;
+}
+.blog__info {
+    margin-right: 73px;
+}
+
+.blog__list {
+    margin-top: 54px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0 48px;
+}
+
+.blog-item__img-wrap {
+    padding: 24px 0 0 36px;
+    border-radius: 24px;
+    background: #90ccff;
+}
+
+.blog-item:nth-child(2) .blog-item__img-wrap {
+    background: #ff997e;
+}
+
+.blog-item:nth-child(3) .blog-item__img-wrap {
+    background: #5bd6e2;
+}
+
+.blog-item__time {
+    color: #fff;
+    font-family: Sora;
+    font-size: 1.4rem;
+    line-height: 1.21; /* 121.429% */
+}
+
+.blog-item__img {
+    margin-top: 25px;
+    width: 100%;
+    height: 296px;
+    display: block;
+    object-fit: cover;
+}
+
+.blog-item__content {
+    margin-top: 28px;
+    padding-right: 2px;
+}
+.blog-item__title {
+    width: 338px;
+    color: #000958;
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 1.54; /* 154.545% */
+}
+
+.blog-item__desc {
+    margin-top: 16px;
+    color: #656689;
+    font-size: 1.4rem;
+    line-height: 1.71; /* 171.429% */
+}
+
+/* footer */
+
+.footer {
+    margin-top: 54px;
+    padding-bottom: 114px;
+    background: linear-gradient(to right, #fff6ed 45%, transparent 45%);
+}
+
+.footer__inner {
+    display: flex;
+}
+
+.footer__logo {
+    margin-top: 114px;
+}
+
+.subscriber-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 35px;
+    width: 268px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 999px;
+    border: 1px solid rgba(255, 91, 46, 0.25);
+    background: #fff;
+    margin-bottom: 68px;
+}
+
+.subscribe-form__input {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
+    border: none;
+    outline: none;
+    padding: 0 22px;
+    font-size: 1.4rem;
+}
+
+.subscribe-form__input::placeholder {
+    color: #656689;
+    font-size: 1.2rem;
+    font-weight: 300;
+    line-height: 1.16; /* 116.667% */
+}
+
+.subscriber-form__submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 45px;
+    height: 46px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    background: #ff5b2e;
+    box-shadow: 0px 15px 28px -7px rgba(255, 91, 46, 0.3);
+    margin-right: -1px;
+}
+
+.subscriber-form__submit:hover {
+    opacity: 0.9;
+}
+
+.footer__heading {
+    color: #000958;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.11; /* 111.111% */
+}
+
+.social-list {
+    display: flex;
+    margin-top: 16px;
+    gap: 0 16px;
+}
+
+.social-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0px 16px 28px -10px rgba(211, 132, 53, 0.33);
+}
+
+.footer__left {
+    width: 42%;
+}
+
+.footer__right-body {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 58px 137px;
+    margin-top: 52px;
+    margin-left: 129px;
+}
+
+.footer__link {
+    color: #656689;
+    font-size: 1.4rem;
+    line-height: 2; /* 200% */
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.footer__list {
+    margin-top: 14px;
 }
